--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:css": "postcss src/**/*.css --base src --dir build/static/css",
+    "start:css": "postcss -w src/**/*.css --base src --dir build/static/css",
+    "build:js": "react-scripts build",
+    "start:js": "react-scripts start",
+    "build": "npm-run-all build:*",
+    "start": "npm-run-all -p start:*",
     "test": "react-scripts test",
     "prepublish": "npm run build",
     "publish": "gh-pages -d build",
@@ -39,6 +43,12 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.1.0",
+    "gh-pages": "^3.1.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1"
   }
 }
